split MathUtils::hanning function into MathUtils2.cc as the new MU::statistics function  is not templated

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,6 +35,7 @@ INCDIRS   := -I. $(CASAINC) $(BOOSTINC) $(PYTHONINC) $(CFITSIOINC)
 LIBS      := $(BOOSTLIB) $(PYTHONLIB) $(CASAPPLIB)
 
 OBJECTS   := MathUtils.o \
+             MathUtils2.o \
              SDContainer.o \
              SDMemTable.o \
              SDReader.o \
