add SDMathWrapper.o (now has cc file)

--- a/src/Makefile
+++ b/src/Makefile
@@ -43,6 +43,7 @@ OBJECTS   := MathUtils.o \
              SDMath.o \
              SDFitter.o \
              SDTemplates.o \
+             SDMathWrapper.o \
              python_SDMemTable.o \
              python_SDReader.o \
              python_SDWriter.o \
